# github-popular

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
app/: main.py  schemas.py
app/github/: clients.py  controllers.py  enums.py  schemas.py  services.py
app/handlers/: key_builder.py
tests/: conftest.py  test_main.py
tests/github/: test_controllers.py  test_services.py
