[tool.poetry]
name = "github-popular"
version = "0.1.0"
description = ""
authors = ["Felipe Carvalho <felipe.carvalho07@gmail.com>"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
known_local_folder="github"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section="THIRDPARTY"

[tool.pytest.ini_options]
addopts = "-v -x --cov=app --cov=github --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
aiohttp = "^3.7.4"
uvicorn = "^0.14.0"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
pytest = "^6.2.4"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
